SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Feature Request #2818444:  Oracle: Connecting as SYS not possible - now it is possible to add the necessary 
driver property to connect as SYS, or any other account that needs to connect as SYSDBA.

Look & Feel Plugin
 - Better support for Nimbus: No horizontal scrollbars on pop up lists (e.g. code completion) 

Oracle Plugin
 - SQL*Loader control file generation.
   Adds a new right mouse menu item to tables in the object tree: "Generate SQL*Loader control file"
   Thanks to José David Moreno Juárez for the patch (Patch ID 2776344)

About dialog now has a clickable link to our home page.
 - Thanks to Hashim Kubba for this patch (ID 2104309)


Graph Plugin:
 - Show constraint name can be selected on each constraint separately. See right mouse menu on constraint line.

Graph Plugin:
 - Allowed constraints to be created using drag and drop.
   To create such a non DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  

 - Updated Korean translation available (Thanks to Youngwoo Kim)


Bug-Fixes:

SQL Scripts Plugin:
 Indexes and foreign key constraints could not be scripted with qualified table names.

SQL Scripts Plugin:
 Foreign key constraints with more than one column were not scripted correctly. (Only first column was included.)  


Schema caching:
 Removed problems with selective schema caching when the same table name
 exisits in two different schemas. E.g. column completion didn't word anymore.

SQL Scripts Plugin:
 - When generating insert scripts from a SQL statement the global
   preference "Qualify table names in generated scripts with the schema name" did not work.
   Thanks to Johann Geyer for the patch (Patch ID 2365193)

SQL Scripts Plugin: